--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
-        "facebook/webdriver": "^1.7"
+        "monolog/monolog": "^2.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "8.3",
+        "facebook/webdriver": "^1.7",
+        "phing/phing": "2.*"
     }
 }
